minor fix the header alignment

--- a/src/Ticket.css
+++ b/src/Ticket.css
@@ -36,7 +36,7 @@
     display: flex;
     gap: 16px;
     margin-right: 30px;
-    right: 10px;
+    right: 20px;
     position: absolute;
 }
 
